[project]
name = "sgs_correlation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docopt>=0.6.2",
    "matplotlib>=3.10.8",
    "mpi4py>=4.1.1",
    "mpi4py-fft>=2.0.6",
    "numpy>=2.4.3",
    "pyfftw>=0.15.1",
    "scipy>=1.17.1",
    "yarg>=0.1.10",
]
